@@ -5,7 +5,7 @@
    =========================================================================
 
    Apache Ant
-   Copyright 1999-2006 The Apache Software Foundation
+   Copyright 1999-2008 The Apache Software Foundation
 
    This product includes software developed by
    The Apache Software Foundation (http://www.apache.org/).
