@@ -26,7 +26,7 @@
     
     <section name="Legal Stuff They Make Us Say">
 
-      <p>All material on this website is Copyright &#169; 1999-2004,
+      <p>All material on this website is Copyright &#169; 1999-2008,
       The Apache Software Foundation.</p>
 
       <p>Sun, Sun Microsystems, Solaris, Java, JavaServer Web
